--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-list></app-list>
 </body>
 </html>
